add kanban/configurações de restaurantes e controle de usuários
